--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,11 @@
 *.DS_Store
 *.sublime-project
 *.sublime-workspace
-*.css
-*.html
-*.js
 
 bower_components/
 node_modules/
 
+public/*.html
 public/vendor/
 public/templates/
 public/js/
