--- a/.gitignore
+++ b/.gitignore
@@ -6,7 +6,7 @@ bower_components/
 node_modules/
 
 app/*.html
-app/vendor/*.*
-app/partials/*.*
-app/js/*.*
-app/css/*.*
+app/vendor/
+app/partials/
+app/js/
+app/css/
