--- a/package.json
+++ b/package.json
@@ -48,6 +48,12 @@
     "grunt-karma": "~0.6.1",
     "grunt-bower-requirejs": "~0.7.0",
     "grunt-bower": "~0.6.1",
-    "grunt-contrib-copy": "~0.4.1"
+    "grunt-contrib-copy": "~0.4.1",
+    "nodemon": "~0.7.10",
+    "http-proxy": "~0.10.3",
+    "connect-restreamer": "~1.0.0",
+    "grunt-autoprefixer": "~0.5.0",
+    "grunt-contrib-imagemin": "~0.4.0",
+    "grunt-contrib-clean": "~0.5.0"
   }
 }
