--- a/package.json
+++ b/package.json
@@ -29,31 +29,21 @@
     "grunt-contrib-uglify": "~0.2.4",
     "grunt-contrib-watch": "~0.5.2",
     "grunt-contrib-less": "~0.7.0",
-    "restler": "~3.1.0",
     "coffee-script": "~1.6.3",
     "grunt-contrib-coffee": "~0.7.0",
     "grunt-shell": "~0.3.1",
     "express": "~3.3.5",
     "grunt-coffeelint": "0.0.7",
     "grunt-lesslint": "~0.11.0",
-    "karma-script-launcher": "~0.1.0",
-    "karma-chrome-launcher": "~0.1.0",
-    "karma-firefox-launcher": "~0.1.0",
-    "karma-html2js-preprocessor": "~0.1.0",
-    "karma-jasmine": "~0.1.1",
-    "karma-requirejs": "~0.1.0",
-    "karma-coffee-preprocessor": "~0.1.0",
-    "karma-phantomjs-launcher": "~0.1.0",
-    "karma": "~0.10.1",
-    "grunt-karma": "~0.6.1",
     "grunt-bower-requirejs": "~0.7.0",
     "grunt-bower": "~0.6.1",
     "grunt-contrib-copy": "~0.4.1",
-    "nodemon": "~0.7.10",
-    "http-proxy": "~0.10.3",
-    "connect-restreamer": "~1.0.0",
     "grunt-autoprefixer": "~0.5.0",
     "grunt-contrib-imagemin": "~0.4.0",
-    "grunt-contrib-clean": "~0.5.0"
+    "grunt-contrib-clean": "~0.5.0",
+    "grunt-contrib-connect": "~0.7.1",
+    "grunt-connect-proxy": "~0.1.10",
+    "load-grunt-tasks": "~0.4.0",
+    "load-grunt-config": "~0.8.0-beta.1"
   }
 }
