--- a/bower.json
+++ b/bower.json
@@ -41,7 +41,6 @@
     "bootstrap": "~3.0.0",
     "knockout": "~2.3.0",
     "font-awesome": "~4.0.3",
-    "backbone": "~1.1.0",
-    "underscore": "~1.5.2"
+    "director": "~1.2.2"
   }
 }
